--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -3,12 +3,19 @@
   "version": "0.0.1",
   "license": "MIT",
   "type": "module",
+  "types": "./dist/src/index.d.ts",
+  "files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
+  "exports": {
+    ".": {
+      "types": "./dist/src/index.d.ts",
+      "import": "./dist/src/index.js"
+    }
+  },
   "scripts": {
-    "start": "ts-node ./src/index.ts",
-    "build": "tsc"
+    "build": "tsc -b",
+    "clean": "rm -rf dist/ node_modules/"
   },
   "devDependencies": {
-    "@swc/core": "^1.5.7",
     "@types/node": "^20.12.12",
     "typescript": "^5.4.5"
   },
@@ -18,7 +25,6 @@
     "@libp2p/mdns": "^10.0.23",
     "@libp2p/mplex": "^10.0.23",
     "@libp2p/tcp": "^9.0.25",
-    "libp2p": "^1.5.2",
-    "ts-node": "^10.9.2"
+    "libp2p": "^1.5.2"
   }
 }
