--- a/packages/network/tsconfig.json
+++ b/packages/network/tsconfig.json
@@ -1,22 +1,7 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2022" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-    "module": "ES2022" /* Specify what module code is generated. */,
-
-    "rootDir": "./src" /* Specify the root folder within your source files. */,
-    "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
-
-    "allowJs": true /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
-    "allowImportingTsExtensions": true,
-
-    "outDir": "./dist" /* Specify an output folder for all emitted files. */,
-    "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
-    "strict": true /* Enable all strict type-checking options. */,
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    "outDir": "dist"
   },
-  "include": ["src/**/*.ts"],
-  "ts-node": {
-    "swc": true,
-    "esm": true
-  }
+  "include": ["src/**/*.ts"]
 }
