add tsconfig configs; add build scripts; fix compiler errors

--- a/packages/crdt/package.json
+++ b/packages/crdt/package.json
@@ -2,7 +2,21 @@
   "name": "@topologygg/crdt",
   "version": "0.0.1",
   "license": "MIT",
+  "type": "module",
+  "types": "./dist/src/index.d.ts",
+  "files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
+  "exports": {
+    ".": {
+      "types": "./dist/src/index.d.ts",
+      "import": "./dist/src/index.js"
+    }
+  },
+  "scripts": {
+    "build": "tsc -b",
+    "clean": "rm -rf dist/ node_modules/"
+  },
   "devDependencies": {
+    "@types/node": "^20.12.12",
     "typescript": "^5.4.5"
   }
 }
