ease deps integration; gitignores

--- a/examples/canvas/tsconfig.json
+++ b/examples/canvas/tsconfig.json
@@ -10,5 +10,10 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "references": [
+    {
+      "path": "../../packages/node"
+    }
+  ]
 }
