--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "clean": "rm -rf dist/ node_modules/",
     "dev": "webpack-dev-server --hot",
     "build": "webpack"
   },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^20.11.16",
     "typescript": "^4.7.4",
