--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -4,14 +4,21 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf dist/ node_modules/",
+    "start": "ts-node ./src/index.ts",
     "dev": "webpack-dev-server --hot",
     "build": "webpack"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@topologygg/crdt": "file:../../packages/crdt",
+    "@topologygg/network": "file:../../packages/network",
+    "@topologygg/node": "file:../../packages/node",
+    "process": "^0.11.10",
+    "ts-node": "^10.9.2"
+  },
   "devDependencies": {
     "@types/node": "^20.11.16",
-    "typescript": "^4.7.4",
     "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.1"
