--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -22,9 +22,10 @@
   "dependencies": {
     "@chainsafe/libp2p-noise": "^15.0.0",
     "@chainsafe/libp2p-yamux": "^6.0.2",
-    "@libp2p/mdns": "^10.0.23",
+    "@libp2p/circuit-relay-v2": "^1.0.24",
     "@libp2p/mplex": "^10.0.23",
-    "@libp2p/tcp": "^9.0.25",
-    "libp2p": "^1.5.2"
+    "@libp2p/webrtc": "^4.0.33",
+    "@libp2p/websockets": "^8.0.24",
+    "libp2p": "^1.6.0"
   }
 }
