--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -23,7 +23,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@topologygg/crdt": "0.0.1",
-    "@topologygg/network": "0.0.1"
+    "@topologygg/crdt": "^0.0.1",
+    "@topologygg/network": "^0.0.1"
   }
 }
