--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -4,7 +4,12 @@
   "license": "MIT",
   "type": "module",
   "types": "./dist/src/index.d.ts",
-  "files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
+  "files": [
+    "src",
+    "dist",
+    "!dist/test",
+    "!**/*.tsbuildinfo"
+  ],
   "exports": {
     ".": {
       "types": "./dist/src/index.d.ts",
@@ -23,6 +28,8 @@
     "@chainsafe/libp2p-noise": "^15.0.0",
     "@chainsafe/libp2p-yamux": "^6.0.2",
     "@libp2p/circuit-relay-v2": "^1.0.24",
+    "@libp2p/echo": "^1.0.7",
+    "@libp2p/identify": "^2.0.2",
     "@libp2p/mplex": "^10.0.23",
     "@libp2p/webrtc": "^4.0.33",
     "@libp2p/websockets": "^8.0.24",
