replace ts-node with tsx

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -19,13 +19,14 @@
   "scripts": {
     "build": "tsc -b",
     "clean": "rm -rf dist/ node_modules/",
-    "relay": "ts-node ./src/run_relay.ts",
-    "start": "ts-node ./src/index.ts"
+    "relay": "tsx ./src/run_relay.ts",
+    "start": "tsx ./src/index.ts"
   },
   "devDependencies": {
     "@swc/core": "^1.5.7",
     "@types/node": "^20.12.12",
     "ts-node": "^10.9.2",
+    "tsx": "^4.11.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
