--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -22,13 +22,13 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "react-native-webrtc": "^118.0.7"
   },
   "dependencies": {
     "@chainsafe/libp2p-noise": "^15.0.0",
     "@chainsafe/libp2p-yamux": "^6.0.2",
     "@libp2p/circuit-relay-v2": "^1.0.24",
-    "@libp2p/echo": "^1.0.7",
     "@libp2p/identify": "^2.0.2",
     "@libp2p/mplex": "^10.0.23",
     "@libp2p/webrtc": "^4.0.33",
