--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -12,6 +12,7 @@
     "@topologygg/crdt": "file:../../packages/crdt",
     "@topologygg/network": "file:../../packages/network",
     "@topologygg/node": "file:../../packages/node",
+    "@topologygg/object": "file:../../packages/object",
     "process": "^0.11.10",
     "ts-node": "^10.9.2"
   },
