--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -13,8 +13,11 @@
     "@topologygg/network": "file:../../packages/network",
     "@topologygg/node": "file:../../packages/node",
     "@topologygg/object": "file:../../packages/object",
+    "crypto-browserify": "^3.12.0",
     "process": "^0.11.10",
-    "ts-node": "^10.9.2"
+    "stream-browserify": "^3.0.0",
+    "ts-node": "^10.9.2",
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
