--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -33,8 +33,10 @@
     "@libp2p/circuit-relay-v2": "^1.0.24",
     "@libp2p/identify": "^2.0.2",
     "@libp2p/mplex": "^10.0.23",
+    "@libp2p/pubsub-peer-discovery": "^10.0.2",
     "@libp2p/webrtc": "^4.0.33",
     "@libp2p/websockets": "^8.0.24",
-    "libp2p": "^1.6.0"
+    "libp2p": "^1.6.0",
+    "multiaddr": "^10.0.1"
   }
 }
