--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@topologygg/node",
-  "version": "0.0.2",
+  "name": "@topology-foundation/node",
+  "version": "0.0.1",
   "license": "MIT",
   "repository": {
     "type": "git",
