--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@topologygg/object",
-  "version": "0.0.2",
+  "name": "@topology-foundation/object",
+  "version": "0.0.1",
   "license": "MIT",
   "repository": {
     "type": "git",
