--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -40,6 +40,7 @@
     "@libp2p/pubsub-peer-discovery": "^10.0.2",
     "@libp2p/webrtc": "^4.0.33",
     "@libp2p/websockets": "^8.0.24",
+    "it-pipe": "^3.0.1",
     "libp2p": "^1.6.0",
     "multiaddr": "^10.0.1"
   }
