add handler, direct messaging sending for peer or topic

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -35,8 +35,8 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@topology-foundation/crdt": "^0.0.1",
-    "@topology-foundation/network": "^0.0.1",
-    "@topology-foundation/object": "^0.0.1"
+    "@topology-foundation/crdt": "0.0.1",
+    "@topology-foundation/network": "0.0.1",
+    "@topology-foundation/object": "0.0.1"
   }
 }
