--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -9,10 +9,10 @@
     "build": "webpack"
   },
   "dependencies": {
-    "@topologygg/crdt": "file:../../packages/crdt",
-    "@topologygg/network": "file:../../packages/network",
-    "@topologygg/node": "file:../../packages/node",
-    "@topologygg/object": "file:../../packages/object",
+    "@topology-foundation/crdt": "file:../../packages/crdt",
+    "@topology-foundation/network": "file:../../packages/network",
+    "@topology-foundation/node": "file:../../packages/node",
+    "@topology-foundation/object": "file:../../packages/object",
     "crypto-browserify": "^3.12.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
