change for topology_app_token

--- a/.github/workflows/project-management.yml
+++ b/.github/workflows/project-management.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/add-to-project@v1.0.1
         with:
           project-url: https://github.com/orgs/topology-foundation/projects/1
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.TOPOLOGY_APP_TOKEN }}
