change triggers for pm workflow

--- a/.github/workflows/project-management.yml
+++ b/.github/workflows/project-management.yml
@@ -1,7 +1,9 @@
 name: Add issues to Project Management dashboard
 on:
-  workflow_dispatch:
   issues:
+    types:
+      - opened
+  pull_request:
     types:
       - opened
 jobs:
