--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "url": "https://github.com/topology-foundation/ts-topology/issues"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "@types/node": "^20.14.2",
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["packages/*"],
   "private": true
 }
