--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,38 +9,48 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: cd packages/crdt
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
+      - shell: bash
+        run: |
+          cd packages/crdt
+          yarn install --frozen-lockfile
+          yarn build
 
   build-network:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: cd packages/network
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
+      - shell: bash
+        run: |
+          cd packages/network
+          yarn install --frozen-lockfile
+          yarn build
 
   build-node:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: cd packages/node
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
+      - shell: bash
+        run: |
+          cd packages/node
+          yarn install --frozen-lockfile
+          yarn build
 
   build-object:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: cd packages/object
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
+      - shell: bash
+        run: |
+          cd packages/object
+          yarn install --frozen-lockfile
+          yarn build
 
   build-example-canvas:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: cd examples/canvas
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
+      - shell: bash
+        run: |
+          cd examples/canvas
+          yarn install --frozen-lockfile
+          yarn build
