--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-topology",
   "description": "The official TypeScript implementation of Topology Protocol",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "license": "MIT",
   "homepage": "https://topology.gg/",
   "repository": {
@@ -27,6 +27,7 @@
   "release-it": {
     "plugins": {
       "@release-it-plugins/workspaces": true
-    }
+    },
+    "npm": false
   }
 }
