--- a/package.json
+++ b/package.json
@@ -22,14 +22,20 @@
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["packages/*"],
   "private": true,
   "release-it": {
     "plugins": {
       "@release-it-plugins/workspaces": true
     },
-    "npm": false
+    "npm": {
+      "publish": false
+    },
+    "git": {
+      "commitMessage": "chore: release v${version}"
+    },
+    "github": {
+      "release": true
+    }
   }
 }
