revert to npm false

--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
     "plugins": {
       "@release-it-plugins/workspaces": true
     },
-    "npm": {
-      "publish": false
-    },
+    "npm": false,
+    "npm.publish": false,
     "git": {
       "commitMessage": "chore: release v${version}"
     },
