revert changes; use dns for relay

--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "webpack",
     "clean": "rm -rf dist/ node_modules/",
-    "dev": "webpack-dev-server --hot",
+    "dev": "webpack serve",
     "start": "ts-node ./src/index.ts"
   },
   "dependencies": {
@@ -24,7 +24,7 @@
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
