--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topology-foundation/node",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -8,7 +8,12 @@
   },
   "type": "module",
   "types": "./dist/src/index.d.ts",
-  "files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
+  "files": [
+    "src",
+    "dist",
+    "!dist/test",
+    "!**/*.tsbuildinfo"
+  ],
   "exports": {
     ".": {
       "types": "./dist/src/index.d.ts",
@@ -31,8 +36,8 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@topology-foundation/crdt": "0.0.5",
-    "@topology-foundation/network": "0.0.5",
-    "@topology-foundation/object": "0.0.5"
+    "@topology-foundation/crdt": "0.0.6",
+    "@topology-foundation/network": "0.0.6",
+    "@topology-foundation/object": "0.0.6"
   }
 }
