--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -8,12 +8,7 @@
   },
   "type": "module",
   "types": "./dist/src/index.d.ts",
-  "files": [
-    "src",
-    "dist",
-    "!dist/test",
-    "!**/*.tsbuildinfo"
-  ],
+  "files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
   "exports": {
     ".": {
       "types": "./dist/src/index.d.ts",
@@ -34,12 +29,15 @@
     "@chainsafe/libp2p-gossipsub": "^13.0.0",
     "@chainsafe/libp2p-noise": "^15.0.0",
     "@chainsafe/libp2p-yamux": "^6.0.2",
+    "@libp2p/autonat": "^1.0.0",
+    "@libp2p/bootstrap": "^10.1.0",
     "@libp2p/circuit-relay-v2": "^1.0.24",
     "@libp2p/identify": "^2.0.2",
-    "@libp2p/mplex": "^10.0.24",
+    "@libp2p/interface-pubsub": "^4.0.1",
     "@libp2p/pubsub-peer-discovery": "^10.0.2",
     "@libp2p/webrtc": "^4.0.33",
     "@libp2p/websockets": "^8.0.24",
+    "@libp2p/webtransport": "^4.0.32",
     "@multiformats/multiaddr": "^12.3.0",
     "it-pipe": "^3.0.1",
     "libp2p": "^1.6.0"
