--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -36,6 +36,7 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
+    "@libp2p/dcutr": "^1.1.0",
     "@topology-foundation/crdt": "0.0.7",
     "@topology-foundation/network": "0.0.7",
     "@topology-foundation/object": "0.0.7"
