--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
+    "node-datachannel": "^0.9.2",
     "tsx": "^4.15.6",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
