--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 
     "esModuleInterop": true,
     "moduleResolution": "node",
+    "allowImportingTsExtensions": true,
 
     "declaration": true,
     "declarationMap": true,
