--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true,
 
     "declaration": true,
     "declarationMap": true,
