--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topology-foundation/node",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -8,7 +8,12 @@
   },
   "type": "module",
   "types": "./dist/src/index.d.ts",
-  "files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
+  "files": [
+    "src",
+    "dist",
+    "!dist/test",
+    "!**/*.tsbuildinfo"
+  ],
   "exports": {
     ".": {
       "types": "./dist/src/index.d.ts",
@@ -32,9 +37,9 @@
   },
   "dependencies": {
     "@libp2p/dcutr": "^1.1.0",
-    "@topology-foundation/crdt": "0.0.13",
-    "@topology-foundation/network": "0.0.13",
-    "@topology-foundation/object": "0.0.13",
+    "@topology-foundation/crdt": "0.0.14",
+    "@topology-foundation/network": "0.0.14",
+    "@topology-foundation/object": "0.0.14",
     "node-datachannel": "^0.10.0"
   }
 }
