--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -8,12 +8,7 @@
   },
   "type": "module",
   "types": "./dist/src/index.d.ts",
-  "files": [
-    "src",
-    "dist",
-    "!dist/test",
-    "!**/*.tsbuildinfo"
-  ],
+  "files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
   "exports": {
     ".": {
       "types": "./dist/src/index.d.ts",
@@ -36,7 +31,6 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@libp2p/dcutr": "^1.1.0",
     "@topology-foundation/crdt": "0.0.15",
     "@topology-foundation/network": "0.0.15",
     "@topology-foundation/object": "0.0.15"
