--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vitest": "^1.6.0"
   },
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "examples/*"
   ],
   "private": true,
   "release-it": {
