--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -9,10 +9,10 @@
     "start": "ts-node ./src/index.ts"
   },
   "dependencies": {
-    "@topology-foundation/crdt": "0.0.2",
-    "@topology-foundation/network": "0.0.2",
-    "@topology-foundation/node": "0.0.2",
-    "@topology-foundation/object": "0.0.2",
+    "@topology-foundation/crdt": "file:../../packages/crdt", 
+    "@topology-foundation/network": "file:../../packages/network", 
+    "@topology-foundation/node": "file:../../packages/node", 
+    "@topology-foundation/object": "file:../../packages/object",
     "crypto-browserify": "^3.12.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
