--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,4 +65,4 @@ jobs:
      - uses: actions/checkout@v4
      - shell: bash
        run: |
-        docker-compose build
+        docker compose build
