--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "vitest": "^1.6.0"
   },
   "workspaces": [
-    "packages/*",
-    "examples/*"
+    "packages/*"
   ],
   "private": true,
   "release-it": {
