--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ts-topology-relay
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push-image:
