--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [release]
 env:
-  IMAGE_NAME: ghcr.io/${{ github.repository }}
+  IMAGE: ghcr.io/${{ github.repository }}
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
@@ -30,7 +30,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.IMAGE_NAME }}
+          images: ${{ env.IMAGE }}
       - name: Build and push Docker image
         id: build
         uses: docker/build-push-action@v6
@@ -69,7 +69,7 @@ merge:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.IMAGE_NAME }}
+        images: ${{ env.IMAGE }}
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -80,7 +80,7 @@ merge:
       working-directory: /tmp/digests
       run: |
         docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-          $(printf '${{ env.IMAGE_NAME }}@sha256:%s ' *)          
+          $(printf '${{ env.IMAGE }}@sha256:%s ' *)          
     - name: Inspect image
       run: |
-        docker buildx imagetools inspect ${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+        docker buildx imagetools inspect ${{ env.IMAGE }}:${{ steps.meta.outputs.version }}
