--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -23,11 +23,9 @@
   "scripts": {
     "build": "tsc -b",
     "clean": "rm -rf dist/ node_modules/",
-    "cli": "tsx ./src/index.ts",
-    "node": "tsx ./src/run_node.ts",
+    "cli": "tsx ./src/run.ts",
     "prebuild": "node -p \"'export const VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/version.ts",
     "prepack": "tsc -b",
-    "relay": "tsx ./src/run_relay.ts",
     "test": "vitest"
   },
   "devDependencies": {
