--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "https://github.com/topology-foundation/ts-topology/issues"
   },
   "scripts": {
+    "docs": "typedoc",
     "release": "release-it",
     "test": "vitest"
   },
@@ -19,6 +20,7 @@
     "@release-it-plugins/workspaces": "^4.2.0",
     "@types/node": "^20.14.10",
     "release-it": "^17.4.1",
+    "typedoc": "^0.26.4",
     "typescript": "^5.4.5",
     "vitest": "^2.0.2"
   },
