--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topology-foundation/network",
-  "version": "0.0.21",
+  "version": "0.0.22-0",
   "license": "MIT",
   "repository": {
     "type": "git",
