adjust docker to run the cli by default

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - 50000:50000
-    command: relay
+    command: -m relay
 
 volumes:
   ssl_data:
