--- a/packages/node/Dockerfile
+++ b/packages/node/Dockerfile
@@ -3,6 +3,7 @@ FROM node:22.3-bookworm-slim
 WORKDIR /node
 COPY . .
 
+RUN yarn
 RUN chmod +x /node/entrypoint.sh
 
 ENTRYPOINT ["/bin/bash", "/node/entrypoint.sh"]
