--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -23,10 +23,9 @@
   "scripts": {
     "build": "tsc -b",
     "clean": "rm -rf dist/ node_modules/",
-    "node": "tsx ./src/run_node.ts",
+    "cli": "tsx ./src/run.ts",
+    "prebuild": "node -p \"'export const VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/version.ts",
     "prepack": "tsc -b",
-    "relay": "tsx ./src/run_relay.ts",
-    "start": "tsx ./src/index.ts",
     "test": "vitest"
   },
   "devDependencies": {
@@ -38,6 +37,7 @@
   "dependencies": {
     "@topology-foundation/crdt": "0.0.22-2",
     "@topology-foundation/network": "0.0.22-2",
-    "@topology-foundation/object": "0.0.22-2"
+    "@topology-foundation/object": "0.0.22-2",
+    "commander": "^12.1.0"
   }
 }
