fix: OR-set merge & lookup fixed, needs testing

--- a/packages/crdt/package.json
+++ b/packages/crdt/package.json
@@ -25,5 +25,9 @@
     "clean": "rm -rf dist/ node_modules/",
     "prepack": "tsc -b",
     "test": "vitest"
+  },
+  "dependencies": {
+    "@topology-foundation/crdt": "^0.0.22-2",
+    "uuid": "^10.0.0"
   }
 }
