--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-topology-examples-canvas",
-  "version": "0.0.22-2",
+  "version": "0.0.22",
   "license": "MIT",
   "scripts": {
     "build": "webpack",
@@ -9,10 +9,10 @@
     "start": "ts-node ./src/index.ts"
   },
   "dependencies": {
-    "@topology-foundation/crdt": "0.0.22-2",
-    "@topology-foundation/network": "0.0.22-2",
-    "@topology-foundation/node": "0.0.22-2",
-    "@topology-foundation/object": "0.0.22-2",
+    "@topology-foundation/crdt": "0.0.22",
+    "@topology-foundation/network": "0.0.22",
+    "@topology-foundation/node": "0.0.22",
+    "@topology-foundation/object": "0.0.22",
     "crypto-browserify": "^3.12.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
