--- a/packages/crdt/package.json
+++ b/packages/crdt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topology-foundation/crdt",
-  "version": "0.0.22-2",
+  "version": "0.0.22",
   "license": "MIT",
   "repository": {
     "type": "git",
