yarn.lock removed, name in examples/chat/package.json changed

--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "topology-example",
+  "name": "topology-example-chat",
   "version": "1.0.0",
   "description": "Topology Protocol Chat Exmaple",
   "main": "src/index.ts",
