use local libs path

--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -6,10 +6,10 @@
   "repository": "https://github.com/topology-foundation/ts-topology.git",
   "license": "MIT",
   "dependencies": {
-    "@topology-foundation/crdt": "0.0.22",
-    "@topology-foundation/network": "0.0.22",
-    "@topology-foundation/node": "0.0.22",
-    "@topology-foundation/object": "0.0.22",
+    "@topology-foundation/crdt": "file:../../packages/crdt",
+    "@topology-foundation/network": "file:../../packages/network",
+    "@topology-foundation/node": "file:../../packages/node",
+    "@topology-foundation/object": "file:../../packages/object",
     "crypto-browserify": "^3.12.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
