add buf gen config files; modified pb file; generated initial obj file

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "docs": "typedoc",
+    "proto-gen": "buf generate",
     "release": "release-it",
     "test": "vitest"
   },
