--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,6 @@
 name: Publish Package to npmjs
 on:
-  release:
-    types: [published]
+  workflow_call:
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
