--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,10 +5,15 @@ on:
 jobs:
   npm_publish:
     name: Publish packages to npmjs
+    permissions:
+      id-token: write
+      packages: write
     uses: ./.github/workflows/npm-publish.yml
-  
+
   build_docker_images:
     name: Build Docker Images
+    permissions:
+      packages: write
     needs:
       - npm_publish
     uses: ./.github/workflows/docker.yml
